- Database check uses less system memory
- RSS feeds were broken
- Automatically open file chooser and auto start file upload in e-mail and file module
- Custom fields: File custom field maximum number of characters: 255.
- Calendar: Improved workflow of resource allocation by resource group admins.
- Fixed reload pagination problem of the contacts grid when adding comments to a contact
- Added override of Ext.removeNode function because of IE9 problems
- Updated German translation

19-03-2014 5.0.48
- 5.0.47 had an invalid folder www in it.

19-03-2014 5.0.47
- Billing: able to turn off reference in billing PDF template
- Calendar: resource application and confirmation workflow now also works in shared calendars
- In some cases participants did not get events when they were added to an existing recurring meeting
- Fixed duplicate linking with experimental auto_link_contacts enabled.
- Updated SabreDAV to version 1.8.9
- Billing: group headers were printed after first group item.
- Mark as unread was not possible anymore with a shared account
- IMAP Flags are enabled for delegated e-mail account.
- Removed irrelevant permission levels in module permissions window.
- Email on new ticket runs from the external ticket page as well
- Check for CLI works on cgi versions now too.

14-03-2014 5.0.46
- Wrong mime type for PDF in billing. "application/x-pdf" was used instead of "application/pdf".
- Calendar export exdate property must have time as well for android
- Billing: changed export income so it looks to the cost codes of the separate items instead of the full order.
- Made number custom fields smaller so they stand out more with right alignment.
- Exporting contact as vcard now sets it's address type as home instead of work.
- Projects2: New csv export of time entries.
- Removed z-push 2 backend. Everyone should upgrade to 2.1.
- Updated z-push 2.1 download link
- GOTA 1.1.13: fixed launch problem for utf8 characters in filename on Mac OS X

05-03-2014 5.0.45